--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
     "react-dom": "~0.14.7",
     "webpack-dev-server": "~1.14.1",
     "css-loader": "~0.23.1",
-    "style-loader": "~0.13.0"
+    "style-loader": "~0.13.0",
+    "redux-devtools": "~3.1.1"
   },
   "dependencies": {
-    "react-addons-css-transition-group": "~0.14.7"
+    "react-addons-css-transition-group": "~0.14.7",
+    "react-redux": "~4.4.0",
+    "redux": "~3.3.1",
+    "lodash": "~4.6.1",
+    "babel-plugin-transform-object-rest-spread": "~6.6.5",
+    "babel-plugin-syntax-object-rest-spread": "~6.5.0",
+    "babel-plugin-transform-runtime": "~6.6.0"
   }
 }
