--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/webpack-dev-server --hot --inline --progress --display-error-details --output-public-path=/build/"
+    "test": "mocha --compilers js:babel-register",
+    "start": "node_modules/.bin/webpack-dev-server --hot --inline --progress --display-error-details --output-public-path=/build/",
+    "devtest": "webpack-dev-server --config webpack.tests.config.js"
   },
   "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "webpack": "~1.12.14",
-    "html-webpack-plugin": "~2.9.0",
-    "babel-loader": "~6.2.4",
     "babel-core": "~6.6.5",
+    "babel-jest": "~9.0.3",
+    "babel-loader": "~6.2.4",
     "babel-preset-es2015": "~6.6.0",
     "babel-preset-react": "~6.5.0",
-    "react-dom": "~0.14.7",
-    "webpack-dev-server": "~1.14.1",
+    "babel-register": "^6.7.2",
     "css-loader": "~0.23.1",
+    "html-webpack-plugin": "~2.9.0",
+    "jest": "~0.1.40",
+    "mocha": "^2.4.5",
+    "react-dom": "~0.14.7",
+    "redux-devtools": "~3.1.1",
     "style-loader": "~0.13.0",
-    "redux-devtools": "~3.1.1"
+    "webpack": "~1.12.14",
+    "webpack-dev-server": "~1.14.1"
   },
   "dependencies": {
     "react-addons-css-transition-group": "~0.14.7",
