--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "~0.1.40",
     "mocha": "^2.4.5",
     "react-dom": "~0.14.7",
+    "react-hot-loader": "^1.3.0",
     "redux-devtools": "~3.1.1",
     "style-loader": "~0.13.0",
     "webpack": "~1.12.14",
