--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "~0.14.7",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "~3.1.1",
+    "redux-thunk": "^2.0.1",
     "style-loader": "~0.13.0",
     "webpack": "~1.12.14",
     "webpack-dev-server": "~1.14.1"
