--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "webpack-dev-server": "~1.14.1"
   },
   "dependencies": {
-    "react-addons-css-transition-group": "~0.14.7",
-    "react-redux": "~4.4.0",
-    "redux": "~3.3.1",
-    "lodash": "~4.6.1",
-    "babel-plugin-transform-object-rest-spread": "~6.6.5",
     "babel-plugin-syntax-object-rest-spread": "~6.5.0",
-    "babel-plugin-transform-runtime": "~6.6.0"
+    "babel-plugin-transform-object-rest-spread": "~6.6.5",
+    "babel-plugin-transform-runtime": "~6.6.0",
+    "lodash": "~4.6.1",
+    "react-addons-css-transition-group": "~0.14.7",
+    "react-dnd": "^2.1.3",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-redux": "~4.4.0",
+    "redux": "~3.3.1"
   }
 }
