--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "babel-core": "~6.6.5",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-jest": "~9.0.3",
     "babel-loader": "~6.2.4",
     "babel-preset-es2015": "~6.6.0",
     "babel-preset-react": "~6.5.0",
     "babel-register": "^6.7.2",
     "css-loader": "~0.23.1",
+    "eslint": "^1.10.3",
     "html-webpack-plugin": "~2.9.0",
     "jest": "~0.1.40",
     "mocha": "^2.4.5",
