--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "react-practice",
+  "name": "kanban-react",
   "version": "0.0.0",
-  "description": "",
+  "description": "React practice",
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register",
     "start": "node_modules/.bin/webpack-dev-server --hot --inline --progress --display-error-details --output-public-path=/build/",
     "devtest": "webpack-dev-server --config webpack.tests.config.js"
   },
-  "author": "",
+  "author": {
+    "name": "InterAl",
+    "email": "interal@gmail.com"
+  },
   "license": "BSD-2-Clause",
   "devDependencies": {
     "babel-core": "~6.6.5",
@@ -18,28 +21,29 @@
     "babel-preset-es2015": "~6.6.0",
     "babel-preset-react": "~6.5.0",
     "babel-register": "^6.7.2",
+    "babel-plugin-syntax-object-rest-spread": "~6.5.0",
+    "babel-plugin-transform-object-rest-spread": "~6.6.5",
+    "babel-plugin-transform-runtime": "~6.6.0",
     "css-loader": "~0.23.1",
     "eslint": "^1.10.3",
     "html-webpack-plugin": "~2.9.0",
     "jest": "~0.1.40",
     "mocha": "^2.4.5",
-    "react-dom": "~0.14.7",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "~3.1.1",
-    "redux-thunk": "^2.0.1",
     "style-loader": "~0.13.0",
     "webpack": "~1.12.14",
     "webpack-dev-server": "~1.14.1"
   },
   "dependencies": {
-    "babel-plugin-syntax-object-rest-spread": "~6.5.0",
-    "babel-plugin-transform-object-rest-spread": "~6.6.5",
-    "babel-plugin-transform-runtime": "~6.6.0",
     "lodash": "~4.6.1",
+    "react": "^0.14.7",
     "react-addons-css-transition-group": "~0.14.7",
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "~0.14.7",
     "react-redux": "~4.4.0",
-    "redux": "~3.3.1"
+    "redux": "~3.3.1",
+    "redux-thunk": "^2.0.1"
   }
 }
