--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React practice",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register",
+    "test": "karma start",
     "start": "node_modules/.bin/webpack-dev-server --hot --inline --progress --display-error-details --output-public-path=/build/",
     "devtest": "webpack-dev-server --config webpack.tests.config.js"
   },
@@ -18,17 +18,34 @@
     "babel-eslint": "^6.0.0-beta.6",
     "babel-jest": "~9.0.3",
     "babel-loader": "~6.2.4",
-    "babel-preset-es2015": "~6.6.0",
-    "babel-preset-react": "~6.5.0",
-    "babel-register": "^6.7.2",
     "babel-plugin-syntax-object-rest-spread": "~6.5.0",
     "babel-plugin-transform-object-rest-spread": "~6.6.5",
     "babel-plugin-transform-runtime": "~6.6.0",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "~6.6.0",
+    "babel-preset-react": "~6.5.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
     "css-loader": "~0.23.1",
     "eslint": "^1.10.3",
     "html-webpack-plugin": "~2.9.0",
+    "isparta-instrumenter-loader": "^1.0.0",
     "jest": "~0.1.40",
+    "karma": "^0.13.22",
+    "karma-coverage": "^0.5.5",
+    "karma-jsdom-launcher": "^3.0.0",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.25",
+    "karma-tap": "^1.0.4",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
+    "phantomjs": "^2.1.3",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dnd-test-backend": "^1.0.2",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "~3.1.1",
     "style-loader": "~0.13.0",
