--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai": "^3.5.0",
     "css-loader": "~0.23.1",
     "eslint": "^1.10.3",
+    "expect": "^1.16.0",
     "html-webpack-plugin": "~2.9.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "jest": "~0.1.40",
@@ -40,6 +41,7 @@
     "karma-spec-reporter": "0.0.25",
     "karma-tap": "^1.0.4",
     "karma-webpack": "^1.7.0",
+    "karma-webpack-with-fast-source-maps": "^1.9.2",
     "mocha": "^2.4.5",
     "phantomjs": "^2.1.3",
     "phantomjs-polyfill": "0.0.2",
